--- a/bin/timemachine.service
+++ b/bin/timemachine.service
@@ -7,7 +7,7 @@ After=connect_network.service
 [Service]
 Type=simple
 User=steve
-ExecStart=/usr/bin/python3 /home/steve/deadstream/main.py --debug 0 --box v1
+ExecStart=/usr/bin/python3 /home/steve/deadstream/main.py --debug 0
 #Restart=on-failure
 [Install]
 WantedBy=multi-user.target
