restart on failure

--- a/bin/serve_options.service
+++ b/bin/serve_options.service
@@ -1,9 +1,13 @@
 [Unit]
 Description=Serve the Time Machine Options
+Requires=connect_network.service
+After=connect_network.service
 [Service]
 Type=simple
+User=steve
 ExecStart=/usr/bin/python3 /home/steve/deadstream/serve_options.py --debug 0
 RemainAfterExit=yes
 User=steve
+Restart=on-failure
 [Install]
 WantedBy=multi-user.target
