--- a/bin/update_tm.service
+++ b/bin/update_tm.service
@@ -3,7 +3,7 @@ Description=Update the Grateful Dead Time Machine
 Requires=connect_network.service
 [Service]
 Type=oneshot
-User=steve
-ExecStart=/usr/bin/python3 /home/steve/deadstream/bin/update.sh
+User=deadhead
+ExecStart=/usr/bin/python3 /home/deadhead/deadstream/bin/update.sh
 [Install]
 WantedBy=multi-user.target
