--- a/bin/timemachine.service
+++ b/bin/timemachine.service
@@ -7,7 +7,7 @@ After=connect_network.service
 [Service]
 Type=simple
 User=deadhead
-ExecStart=/usr/bin/python3 /home/deadhead/deadstream/main.py --debug 0
+ExecStart=/usr/bin/python3 /home/deadhead/deadstream/main.py
 #Restart=on-failure
 [Install]
 WantedBy=multi-user.target
