--- a/bin/connect_network.service
+++ b/bin/connect_network.service
@@ -2,8 +2,8 @@
 Description=Check Network Exists or Setup Network
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/python3 /home/steve/deadstream/connect_network.py --debug 0
+ExecStart=/usr/bin/python3 /home/deadhead/deadstream/connect_network.py --debug 0
 RemainAfterExit=yes
-User=steve
+User=deadhead
 [Install]
 WantedBy=multi-user.target
