--- a/bin/connect_network.service
+++ b/bin/connect_network.service
@@ -1,5 +1,7 @@
 [Unit]
 Description=Check Network Exists or Setup Network
+Wants=network.target
+After=systemd-user-sessions.service
 [Service]
 Type=oneshot
 ExecStart=/bin/sh -c 'while ! /usr/bin/python3 /home/deadhead/deadstream/connect_network.py --debug 0; do sleep 5; done'
