--- a/timemachine/bin/serve_options.service
+++ b/timemachine/bin/serve_options.service
@@ -5,7 +5,8 @@ After=connect_network.service
 [Service]
 Type=simple
 User=deadhead
-ExecStart=/usr/bin/python3 /home/deadhead/deadstream/timemachine/serve_options.py --debug 0
+#ExecStart=/usr/bin/python3 /home/deadhead/deadstream/timemachine/serve_options.py --debug 0
+ExecStart=/home/deadhead/timemachine/bin/serve_options --debug 0
 RemainAfterExit=no
 Restart=on-failure
 [Install]
