--- a/timemachine/bin/update.service
+++ b/timemachine/bin/update.service
@@ -4,7 +4,6 @@ Requires=connect_network.service
 [Service]
 Type=simple
 User=deadhead
-#ExecStart=/home/deadhead/deadstream/bin/update.sh
-ExecStart=source /home/deadhead/timemachine/bin/activate && update.sh
+ExecStart=/home/deadhead/deadstream/bin/update.sh
 [Install]
 WantedBy=multi-user.target
