--- a/timemachine/bin/connect_network.service
+++ b/timemachine/bin/connect_network.service
@@ -6,7 +6,7 @@ After=systemd-user-sessions.service
 Type=oneshot
 User=deadhead
 #ExecStart=/bin/sh -c 'while ! /usr/bin/python3 /home/deadhead/deadstream/timemachine/connect_network.py --debug 0; do sleep 5; done'
-ExecStart=/home/deadhead/timemachine/bin/connect_network --debug 0
+ExecStart=/bin/bash -c "source /home/deadhead/timemachine/bin/activate && connect_network --debug 0"
 RemainAfterExit=yes
 [Install]
 WantedBy=multi-user.target
