--- a/timemachine/bin/update.service
+++ b/timemachine/bin/update.service
@@ -4,6 +4,6 @@ Requires=connect_network.service
 [Service]
 Type=simple
 User=deadhead
-ExecStart=/bin/bash -c "source /home/deadhead/timemachine/bin/activate && update.sh"
+ExecStart=/home/deadhead/timemachine/bin/update.sh
 [Install]
 WantedBy=multi-user.target
