add a stand_by script to leave screen non-black

--- a/timemachine/bin/calibrate.service
+++ b/timemachine/bin/calibrate.service
@@ -3,7 +3,8 @@ Description=Calibrate Time Machine
 [Service]
 Type=oneshot
 User=deadhead
-ExecStart=/bin/bash -c "source /home/deadhead/timemachine/bin/activate && calibrate --debug 0"
+ExecStart=/bin/bash -c "source /home/deadhead/timemachine/bin/activate && calibrate"
+ExecStart=/bin/bash -c "source /home/deadhead/timemachine/bin/activate && stand_by.sh"
 RemainAfterExit=yes
 [Install]
 WantedBy=multi-user.target
