have calibrate kill itself so that screen doesn't black out

--- a/timemachine/bin/calibrate.service
+++ b/timemachine/bin/calibrate.service
@@ -3,8 +3,7 @@ Description=Calibrate Time Machine
 [Service]
 Type=oneshot
 User=deadhead
-ExecStart=/bin/bash -c "source /home/deadhead/timemachine/bin/activate && calibrate"
-ExecStart=/bin/bash -c "source /home/deadhead/timemachine/bin/activate && stand_by.sh"
+ExecStart=/bin/bash -c "source /home/deadhead/timemachine/bin/activate && calibrate.sh"
 RemainAfterExit=yes
 [Install]
 WantedBy=multi-user.target
