--- a/cloud_server/requirements.txt
+++ b/cloud_server/requirements.txt
@@ -1,7 +1,7 @@
 # pip install -r requirements.txt
 
 pytest
-git+https://github.com/eichblatt/deadstream.git@dev
+git+https://github.com/eichblatt/deadstream.git@cloud_api
 Flask
 google-cloud-storage
 gunicorn
